# Healthcare-Triage-Multi-Agent

./: .gitignore  Agent_improvement_progress.md  AssignmentInstructions.md  README.md  SummaryAgentChanges.md  UI_changes.md  development_tasks.md  implementation_plan.md  medical_agent_prompts.md  prd.md  pyproject.toml  summary_agent.md  updated-prd.md
mdt_agent_system/: .env  .env.template  README.md  main.py  progress.md  report_04e94038-7803-41a8-b509-7809f1cb5140.json  report_0fe44ce4-980a-4b38-bdb8-09b155f7c0a1.json  report_13bca018-1197-4e69-9e73-731d6835fe42.json  report_1529ed3f-7f25-4ed2-a49a-a8beac57b22f.json  report_197997fd-9aac-4842-bb1a-583ddb7cd188.json  report_3289bcac-9dcc-48b2-91f5-01ef942e68cc.json  report_49b2f02c-d424-4561-9582-e7dfaf1ac7cb.json  report_64a96493-71f5-48f5-99f4-9c2536318ddc.json  report_8106dfd8-6bd9-49a3-b9bd-51a1e7623fb3.json  report_9fd6d89b-227b-427e-acb9-b6123e88321a.json  report_b5654b5a-e88a-4c1c-89e6-0567ad3163ae.json  report_badc9c52-d9bf-4d56-a104-7200d4c2ed92.json  report_bc2f2cbb-db57-480d-8e63-b8cc4884a34b.json  report_bc853e41-3a79-46de-a831-06ad686e53db.json  report_c84a785f-110e-4267-aa1d-33653dc6b1e9.json  report_ca16eeac-fc20-4b1f-8f11-fe61803a5b1c.json  report_cd313cb1-548e-4a94-911c-e545344262b6.json  report_dbc62e5b-0d8b-4edc-817c-7bc626d1efa5.json  report_df786b47-cf96-4e9f-ba15-1a2c66400f83.json  report_e353a1be-3ac3-42f1-a660-bad66a2e58e2.json  report_f70710b2-e176-4193-9d4e-af41f6273e9d.json  requirements.txt  setup.py
mdt_agent_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mdt_agent_system/app/: app.py  main.py  (+1 more)
(+74 files in other folders)
