[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdt-agent-system"
version = "0.1.0"
description = "Multi-Agent System for Medical Decision Support"
requires-python = ">=3.8"
dependencies = [
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mdt_agent_system*"]
exclude = ["mdt_agent_system.tests*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["mdt_agent_system/app/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.pytest-asyncio]
asyncio_default_fixture_loop_scope = "function" 